# IdeaCodeRelease

./: LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml
Backend/: .env.example  Dockerfile  assistant_hints.json  config.py  database.py  dependencies.py  models.py  requirements.txt  schemas.py  server.py  site_guide.txt  users.db
Backend/migrations/: add_category_to_posts.py  add_photo_url_to_posts.py
Backend/routes/: __init__.py  assistant.py  auth.py  comments.py  dish.py  dish_category.py  events.py  gallery.py  knowledge.py  menu.py  news.py  ocr.py  posts.py  timetable.py  users.py
Backend/static/avatars/: avatar_1.jfif
Frontend/: .gitignore  Dockerfile  package-lock.json  package.json
Frontend/src/: app.d.ts
Frontend/src/lib/components/: ChatBot.svelte  Navbar.svelte  Profile.svelte  PsychologistChatBot.svelte
Frontend/src/lib/services/: assistant.ts  auth.ts  events.ts  menu.ts  psychologist.ts  timetable.ts
Frontend/src/routes/: +layout.svelte  +page.svelte
Frontend/src/routes/account/: +page.svelte
Frontend/src/routes/admin_panel/: +page.svelte
Frontend/src/routes/afisha/: +page.svelte
Frontend/src/routes/booking/: +page.svelte
Frontend/src/routes/forum/: +page.svelte
Frontend/src/routes/knowledge/: +page.svelte
Frontend/src/routes/login/: +page.svelte
Frontend/src/routes/menu/: +page.svelte
Frontend/src/routes/notes/: +page.svelte
Frontend/src/routes/profile/: +page.svelte
Frontend/src/routes/psychologist/: +page.svelte
Frontend/static/: placeholder.txt
Frontend/static/avatars/: test.txt
(+9 files in other folders)
