[tool.poetry]
name = "idearelease-backend"
version = "0.1.0"
description = "Backend API for IdeaRelease platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
python-dotenv = "^1.1.0"
email-validator = "^2.2.0"
alembic = "^1.13.1"
fastapi-users = "^12.1.3"
fastapi-jwt-auth = "^0.5.0"
fastapi-mail = "^1.4.1"
fastapi-cache2 = "^0.2.1"
fastapi-limiter = "^0.1.6"
fastapi-pagination = "^0.12.19"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 